...
                                        <color key="textColor" red="0.2156862745" green="0.2156862745" blue="0.2156862745" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f0S-1y-ZCh">
                                        <rect key="frame" x="0.0" y="90.5" width="334" height="50"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Login"/>
                                        <connections>
                                            <segue destination="DSc-Tq-4CO" kind="show" id="6UW-IL-Fkk"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
...
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="D3Q-DC-1kD">
                                        <rect key="frame" x="0.0" y="54" width="334" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qj3-BD-sOk">
                                        <rect key="frame" x="0.0" y="108" width="334" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9rs-gN-hKS">
                                        <rect key="frame" x="0.0" y="162" width="334" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eeE-bw-HuP">
                                        <rect key="frame" x="0.0" y="216" width="334" height="50"/>
...
                            <constraint firstItem="GpF-eR-skI" firstAttribute="trailing" secondItem="IVB-db-xyK" secondAttribute="trailing" constant="20" id="KH9-br-ZA4"/>
                            <constraint firstItem="GkB-RT-2En" firstAttribute="bottom" secondItem="GpF-eR-skI" secondAttribute="bottom" id="Mqq-9k-dej"/>
                            <constraint firstItem="GkB-RT-2En" firstAttribute="top" secondItem="GpF-eR-skI" secondAttribute="top" id="S36-Ts-44H"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="GpF-eR-skI"/>
                    </view>
                    <navigationItem key="navigationItem" title="My Albums" id="bXY-rH-cLv"/>
                    <connections>
                        <outlet property="activityIndicator" destination="rI0-nY-ZFZ" id="Cy6-Zy-S0q"/>
                        <outlet property="activityLabel" destination="2w4-ft-py6" id="cbp-7M-xAO"/>
                        <outlet property="collectionView" destination="GkB-RT-2En" id="hU9-5P-zSk"/>
                        <segue destination="ydl-Du-Uuj" kind="show" identifier="Logout" id="9p4-8K-lfN"/>
                        <segue destination="q5y-a5-OTE" kind="show" identifier="loadAlbum" id="OvO-4J-zTp"/>
...
                                            <constraint firstAttribute="height" constant="200" id="iZp-Ea-gJN"/>
                                        </constraints>
                                    </imageView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="pfU-4S-Yhu">
                                        <rect key="frame" x="0.0" y="230" width="300" height="123"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="How To Add Album" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="asS
                                                <rect key="frame" x="0.0" y="0.0" width="300" height="41"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="31"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="1) Tap the + icon in Albums 2) Select &quot;Scan QR Code&quot; 3) Hover over this QR code" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" tran
...
                        <constraints>
                            <constraint firstItem="he7-Bv-j34" firstAttribute="centerY" secondItem="8Qt-h2-DFp" secondAttribute="centerY" id="1xv-Xp-TdQ"/>
                            <constraint firstItem="he7-Bv-j34" firstAttribute="centerX" secondItem="8Qt-h2-DFp" secondAttribute="centerX" id="A2g-fD-d52"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="OlJ-o3-4lj"/>
                    </view>
                    <navigationItem key="navigationItem" title="QR Code" id="1Wm-Zh-akd"/>
                    <connections>
                        <outlet property="QRCodeImageView" destination="MBO-59-Vf7" id="Huv-U2-cQe"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="DaZ-my-9EF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
