...

    //var albumViewModelOLD = AlbumViewModelOLD()
    let allUserAlbums = ShowingAllUserAlbumsViewModel()
    var userAlbumNames = [String]()

    lazy var selectBarButtonItem: UIBarButtonItem = {
        let barbuttonItem = UIBarButtonItem(title: "Select", style: .plain, target: self,
                                            action: #selector(self.tappedSelectButton(_:)))
        return barbuttonItem
    }()

    lazy var deleteBarButtonItem: UIBarButtonItem = {
        let barbuttonItem = UIBarButtonItem(barButtonSystemItem: .trash, target: self,
                                            action: #selector(self.tappedDeleteButton(_:)))
        barbuttonItem.tintColor = .systemRed
        return barbuttonItem
    }()

    lazy var profileBarButtonItem: UIBarButtonItem = {
        let barbuttonItem = UIBarButtonItem(image: UIImage(systemName: "person.circle"),
                                            style: .plain, target: self,
                                            action: #selector(self.tappedProfileButton(_:)))
        return barbuttonItem
    }()

    var selectedIndexPathDictionary: [IndexPath: Bool] = [:]
...
                selectedIndexPathDictionary.removeAll()

                selectBarButtonItem.title = "Select"
                navigationItem.rightBarButtonItems = [profileBarButtonItem, selectBarButtonItem]
                collectionView.allowsMultipleSelection = false
            case .select:
                selectBarButtonItem.title = "Cancel"
                navigationItem.rightBarButtonItems = [deleteBarButtonItem, selectBarButtonItem]
                collectionView.allowsMultipleSelection = true
            }
        }
    }

...
            session?.delegate = self
            session?.activate()
        }
    }

    @objc func tappedProfileButton(_ sender: AnyObject) {
        let actionSheet = UIAlertController(title: "Confirm", message: nil, preferredStyle: .actionSheet)

        let actionSignout = UIAlertAction(title: "Sign Out", style: .destructive) { (_) in
            do {
                try Auth.auth().signOut()
            } catch {
                let alert = UIAlertController(title: "Error", message: "Cannot Sign Out", preferredStyle: .alert)
                alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
                self.present(alert, animated: true, completion: nil)
...

    @objc func tappedSelectButton(_ sender: AnyObject) {
        mode = mode == .view ? .select: .view
    }

    @objc func tappedDeleteButton(_ sender: AnyObject) {
        let alert = UIAlertController(title: "Delete Album ?",
                                      message: "Does not effect other members of the album",
                                      preferredStyle: .actionSheet)

        let deleteAction = UIAlertAction(title: "Delete", style: .destructive) { (_) in
            var deleteIndexPaths = [IndexPath]()
            var deleteAlbumIDs = [String]()
            for (key, value) in self.selectedIndexPathDictionary where value {
                deleteIndexPaths.append(key)
                deleteAlbumIDs.append(self.albumsCollectionViewSource[key.item].albumID)
            }
...
    }

    //swiftlint:disable all
    @objc func addTapped() {
        //swiftlint:enable all
        trackAnalytics.log(name: NameConstants.addAlbum, parameters: nil)
        let actionSheet = UIAlertController(title: "Add Album", message: "Choose an option",
                                            preferredStyle: .actionSheet)
        let createNewAction = UIAlertAction(title: "Create New", style: .default) { (_) in
            let alert = UIAlertController(title: "New Album", message: "Enter a name for this album",
                                          preferredStyle: .alert)
            self.trackAnalytics.log(name: NameConstants.createNewAlbum, parameters: nil)
            alert.addTextField { (textField) in
                textField.placeholder = "Title"
            }
            alert.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: { (_) in
                self.trackAnalytics.log(name: NameConstants.cancelCreateNew, parameters: nil)
                alert.dismiss(animated: true, completion: nil)
            }))
            alert.addAction(UIAlertAction(title: "Save", style: .default, handler: { [weak alert] (_) in
                self.trackAnalytics.log(name: NameConstants.saveCreateNew, parameters: nil)
                let albumName = alert?.textFields![0].text
                //self.allUserAlbums.addNewAlbum(newAlbumName: albumName!)
                if let albumName = albumName {
                    self.albumViewModel.createNewAlbum(albumName: albumName,
                                                       albumIDs: self.userAlbumIDs,
                                                       currentAlbums: self.albumsCollectionViewSource)
                }
            }))
            self.present(alert, animated: true, completion: nil)
        }

        let existingAlbumAction = UIAlertAction(title: "Existing Album", style: .default) { (_) in
            self.trackAnalytics.log(name: NameConstants.existingAlbum, parameters: nil)
            let alert = UIAlertController(title: "Existing Album", message: "Paste or type the album ID",
                                          preferredStyle: .alert)
            alert.addTextField { (textField) in
                textField.placeholder = "Album ID"
            }
            alert.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: { (_) in
                self.trackAnalytics.log(name: NameConstants.cancelExisting, parameters: nil)
                alert.dismiss(animated: true, completion: nil)
            }))
            alert.addAction(UIAlertAction(title: "Add", style: .default, handler: { [weak alert](_) in
                self.trackAnalytics.log(name: NameConstants.saveExisting, parameters: nil)
                let existingAlbumID = alert?.textFields![0].text
                if let existingAlbumID = existingAlbumID {
                    self.albumViewModel.addExisting(albumID: existingAlbumID, albumIDs: self.userAlbumIDs,
                                                    currentAlbums: self.albumsCollectionViewSource)
                }
...
